Fixed register allocation bug in x64 backend (bug 516093, r=gal).